Build: remove gradle scan option

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ jdk:
   - openjdk11
 
 script:
-  - ./gradlew lintKotlin build --warning-mode=all --scan -s
+  - ./gradlew lintKotlin build --warning-mode=all
