--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,12 @@ repositories {
 }
 
 dependencies {
-    compile 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk7'
+    api 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7'
 
-    testCompile 'org.assertj:assertj-core:3.11.1'
-    testCompile 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0'
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.2'
+    testImplementation 'org.assertj:assertj-core:3.11.1'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
 }
 
