--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 }
 
 dependencies {
-    api 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    api 'io.reactivex.rxjava2:rxjava:2.2.5'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7'
 
     testImplementation 'org.assertj:assertj-core:3.11.1'
